<resources>
    <string name="app_name">TaskManager</string>
    <string name="zadatak">Novi zadatak</string>
    <string name="statistika">Statistika</string>

    <string name="ime">Ime zadatka</string>
    <string name="period">Vreme</string>
    <string name="opis">Opis zadatka</string>
    <string name="podsetnik">Podseti me 15min pre isteka zadatka</string>
    <string name="dodaj">Dodaj</string>
    <string name="otkazi">Otkazi</string>
    <string name="pocetna">Pocetna</string>
    <string name="dalje">Datum</string>
    <string name="kraj">Kraj</string>
</resources>
