<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masa.taskmanager.NoviZadatak">




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etImeZad"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:hint="@string/ime"
        android:scrollHorizontally="true"
        android:textAlignment="center"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etOpis"
        app:layout_constraintTop_toBottomOf="@+id/etImeZad"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_width="352dp"
        android:id="@+id/layoutVreme"
        android:layout_height="48dp"
        tools:layout_editor_absoluteY="42dp">
        <Button

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:id="@+id/btnVreme"
            android:text="@string/period"
/>
        <TextView
            android:id="@+id/tvDatum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tvVreme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>



        <EditText
            app:layout_constraintTop_toBottomOf="@+id/layoutVreme"
            app:layout_constraintBottom_toTopOf="@+id/cbPodsetnik"
            android:layout_width="match_parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            android:id="@+id/etOpis"
            android:layout_height="243dp"
            android:hint="@string/opis"
            android:textAlignment="center" />


    <CheckBox
        android:id="@+id/cbPodsetnik"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/podsetnik"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etOpis"
        app:layout_constraintBottom_toTopOf="@+id/layoutBoje"/>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:layout_height="wrap_content"
    android:id="@+id/layoutButtons"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layoutBoje"
    app:layout_constraintBottom_toBottomOf="parent">
    <Button
        android:layout_width="wrap_content"
        android:text="@string/dodaj"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btnDodaj"
      />

    <Button
        android:text="@string/otkazi"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:id="@+id/btnOtkazi"
        android:layout_height="wrap_content"
      />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBoje"
        android:layout_width="match_parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintTop_toBottomOf="@+id/cbPodsetnik">

    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/crvena"
        android:id="@+id/btnCrvena"
         />
    <Button
        android:layout_weight="1"
        android:backgroundTint="@color/zuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnZuta" />
    <Button
        android:backgroundTint="@color/zelena"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnZelena" />
</LinearLayout>

</android.support.constraint.ConstraintLayout>




